# memory-class

./: .gitignore  CMakeLists.txt  README.md  dummy.cpp  macros.h  mem.hpp  memory.hpp  offsets.hpp  program.cpp
example/: offsets.hpp  program.cpp
